--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1634,103 +1634,87 @@ angal.xmpp.usersinfo.border                                                     
 angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                                       = \n*** {0} wants to share with you this report: {1}\n
 angal.xmpp.wouldliketosend.fmt.msg                                                                     = {0} would like to send: \n{1}
 angal.xmpp.youhaverejectedthefiletransfer.txt                                                          = you have rejected the file transfer
-angal.anamnesis.alcool                                                        = Alcool
-angal.anamnesis.alcool.no                                                     = No
-angal.anamnesis.alcool.yes                                                    = Yes
-angal.anamnesis.alvo                                                          = Alvo
-angal.anamnesis.alvo.normal                                                   = Normal
-angal.anamnesis.alvo.other                                                    = Other
-angal.anamnesis.cancel                                                        = Cancel
-angal.anamnesis.closed.cardiovascolaris                                       = Cardiovascolaris
-angal.anamnesis.closed.diseases                                               = Diseases
-angal.anamnesis.closed.drugsaddiction                                         = DrugsAddiction
-angal.anamnesis.closed.endocrinometabol                                       = Endocrine / Metabolic
-angal.anamnesis.closed.gyno                                                   = Gyno/Obstetrical
-angal.anamnesis.closed.hypertension                                           = Hypertension
-angal.anamnesis.closed.infective                                              = Infective
-angal.anamnesis.closed.neoplastic                                             = Neoplastic
-angal.anamnesis.closed.nothingtodeclare                                       = Nothing to declare
-angal.anamnesis.closed.orto                                                   = Ortoreumatologic
-angal.anamnesis.closed.other                                                  = Other
-angal.anamnesis.closed.pastproblems                                           = Past problems (Closed)
-angal.anamnesis.closed.remarks                                                = Remarks (Closed)
-angal.anamnesis.closed.respiratory                                            = Respiratory
-angal.anamnesis.closed.tooltip.excludenothingtodeclare                        = Exclude 'Nothing to declare'
-angal.anamnesis.closed.tooltip.resetpastproblems                              = Reset Past Problems
-angal.anamnesis.diet                                                          = Diet
-angal.anamnesis.diet.normal                                                   = Normal
-angal.anamnesis.diet.other                                                    = Other
-angal.anamnesis.diuresis                                                      = Diuresis
-angal.anamnesis.diuresis.normal                                               = Normal
-angal.anamnesis.diuresis.other                                                = Other
-angal.anamnesis.drugs                                                         = Drugs
-angal.anamnesis.drugs.no                                                      = No
-angal.anamnesis.drugs.yes                                                     = Yes
-angal.anamnesis.examination                                                   = Examination
-angal.anamnesis.extra.allergy                                                 = Allergy
-angal.anamnesis.extra.medicine                                                = Usual Medications
-angal.anamnesis.extra.remarks                                                 = Remarks (Extra)
-angal.anamnesis.extra.surgery                                                 = Surgery
-angal.anamnesis.extra.therapy                                                 = Therapy
-angal.anamnesis.family.cardiovascolaris                                       = Cardiovascolaris
-angal.anamnesis.family.diseases                                               = Diseases
-angal.anamnesis.family.drugsaddiction                                         = DrugsAddiction
-angal.anamnesis.family.endocrinometabol                                       = Endocrine / Metabolic
-angal.anamnesis.family.familyhistory                                          = Family History
-angal.anamnesis.family.gyno                                                   = Gyno/Obstetrical
-angal.anamnesis.family.hypertension                                           = Hypertension
-angal.anamnesis.family.infective                                              = Infective
-angal.anamnesis.family.neoplastic                                             = Neoplastic
-angal.anamnesis.family.nothingtodeclare                                       = Nothing to declare
-angal.anamnesis.family.orto                                                   = Ortoreumatologic
-angal.anamnesis.family.other                                                  = Other
-angal.anamnesis.family.remarks                                                = Remarks (Family)
-angal.anamnesis.family.respiratory                                            = Respiratory
-angal.anamnesis.family.tooltip.excludenothingtodeclare                        = Exclude 'Nothing to declare'
-angal.anamnesis.family.tooltip.resetfamilyhistory                             = Reset Family History
-angal.anamnesis.firstname                                                     = First Name:
-angal.anamnesis.hrt                                                           = HRT
-angal.anamnesis.hrt.no                                                        = No
-angal.anamnesis.hrt.yes                                                       = Yes
-angal.anamnesis.menopause                                                     = Menopause
-angal.anamnesis.menopause.no                                                  = No
-angal.anamnesis.menopause.years                                               = Years
-angal.anamnesis.menopause.yes                                                 = Yes
-angal.anamnesis.open.cardiovascolaris                                         = Cardiovascolaris
-angal.anamnesis.open.diseases                                                 = Diseases
-angal.anamnesis.open.drugsaddiction                                           = DrugsAddiction
-angal.anamnesis.open.endocrinometabol                                         = Endocrine / Metabolic
-angal.anamnesis.open.gyno                                                     = Gyno/Obstetrical
-angal.anamnesis.open.hypertension                                             = Hypertension
-angal.anamnesis.open.infective                                                = Infective
-angal.anamnesis.open.neoplastic                                               = Neoplastic
-angal.anamnesis.open.nothingtodeclare                                         = Nothing to declare
-angal.anamnesis.open.orto                                                     = Ortoreumatologic
-angal.anamnesis.open.other                                                    = Other
-angal.anamnesis.open.recentproblems                                           = Recent problems (Open)
-angal.anamnesis.open.remarks                                                  = Remarks (Open)
-angal.anamnesis.open.respiratory                                              = Respiratory
-angal.anamnesis.open.tooltip.excludenothingtodeclare                          = Exclude 'Nothing to declare'
-angal.anamnesis.open.tooltip.resetrecentproblems                              = Reset Recent problems
-angal.anamnesis.patid                                                         = Code:
-angal.anamnesis.patient                                                       = Patient
-angal.anamnesis.period                                                        = Period
-angal.anamnesis.period.normal                                                 = Normal
-angal.anamnesis.period.other                                                  = Other
-angal.anamnesis.physiologicalhistory                                          = Physiological History
-angal.anamnesis.pregnancies                                                   = Pregnancies
-angal.anamnesis.pregnancies.abort                                             = Abort Nr
-angal.anamnesis.pregnancies.delivery                                          = Delivery Nr
-angal.anamnesis.pregnancies.no                                                = No
-angal.anamnesis.pregnancies.nr                                                = Nr
-angal.anamnesis.pregnancies.yes                                               = Yes
-angal.anamnesis.save                                                          = Save
-angal.anamnesis.secondname                                                    = Second Name:
-angal.anamnesis.smoke                                                         = Smoke
-angal.anamnesis.smoke.no                                                      = No
-angal.anamnesis.smoke.yes                                                     = Yes
-angal.anamnesis.stp                                                           = THC:
-angal.anamnesis.taxcode                                                       = Tax Number ID:
-angal.anamnesis.title                                                         = PatientHistoryEdit
-angal.anamnesis.tooltip.insertpatientexamination                              = Insert Patient Examination
-angal.anamnesis.tooltip.savethepatienthistory                                 = Save the Patient History
+angal.anamnesis.alcool.txt                                                        				       = Alcool
+angal.anamnesis.alcool.no.txt                                                     				       = No
+angal.anamnesis.alcool.yes.txt                                           					           = Yes
+angal.anamnesis.alvo.txt                                                 					           = Alvo
+angal.anamnesis.alvo.normal.txt                                              					       = Normal
+angal.anamnesis.alvo.other.txt                                                   				       = Other
+angal.anamnesis.cancel.txt                                           					               = Cancel
+angal.anamnesis.closed.cardiovascolaris.txt                            					               = Cardiovascolaris
+angal.anamnesis.closed.diseases.txt                                    					               = Diseases
+angal.anamnesis.closed.drugsaddiction.txt                               				               = DrugsAddiction
+angal.anamnesis.closed.endocrinometabol.txt                          					               = Endocrine / Metabolic
+angal.anamnesis.closed.gyno.txt                                     					               = Gyno/Obstetrical
+angal.anamnesis.closed.hypertension.txt                              					               = Hypertension
+angal.anamnesis.closed.infective.txt                                                                   = Infective
+angal.anamnesis.closed.neoplastic.txt                                                                  = Neoplastic
+angal.anamnesis.closed.nothingtodeclare.txt                                                            = Nothing to declare
+angal.anamnesis.closed.orto.txt                                                                        = Ortoreumatologic
+angal.anamnesis.closed.other.txt                                                                       = Other
+angal.anamnesis.closed.pastproblems.border                                                             = Past problems (Closed)
+angal.anamnesis.closed.remarks.border                                                                  = Remarks (Closed)
+angal.anamnesis.closed.respiratory.txt                                                                 = Respiratory
+angal.anamnesis.closed.excludenothingtodeclare.tooltip                                                 = Exclude 'Nothing to declare'
+angal.anamnesis.closed.resetpastproblems.tooltip                                                       = Reset Past Problems
+angal.anamnesis.diet.txt                                                                               = Diet
+angal.anamnesis.diet.normal.txt                                                                        = Normal
+angal.anamnesis.diet.other.txt                                                                         = Other
+angal.anamnesis.diuresis.txt                                                                           = Diuresis
+angal.anamnesis.diuresis.normal.txt                                                                    = Normal
+angal.anamnesis.diuresis.other.txt                                                                     = Other
+angal.anamnesis.drugs.txt                                                                              = Drugs
+angal.anamnesis.drugs.no.txt                                                                           = No
+angal.anamnesis.drugs.yes.txt                                                                          = Yes
+angal.anamnesis.examination.txt                                                                        = Examination
+angal.anamnesis.extra.allergy.border                                                                   = Allergy
+angal.anamnesis.extra.medicine.border                                                                  = Usual Medications
+angal.anamnesis.extra.remarks.border                                                                   = Remarks (Extra)
+angal.anamnesis.extra.surgery.border                                                                   = Surgery
+angal.anamnesis.extra.therapy.border                                                                   = Therapy
+angal.anamnesis.family.cardiovascolaris.txt                                                            = Cardiovascolaris
+angal.anamnesis.family.diseases.txt                                                                    = Diseases
+angal.anamnesis.family.drugsaddiction.txt                                                              = DrugsAddiction
+angal.anamnesis.family.endocrinometabol.txt                                                            = Endocrine / Metabolic
+angal.anamnesis.family.familyhistory.border                                                            = Family History
+angal.anamnesis.family.gyno.txt                                                                        = Gyno/Obstetrical
+angal.anamnesis.family.hypertension.txt                                                                = Hypertension
+angal.anamnesis.family.infective.txt                                                                   = Infective
+angal.anamnesis.family.neoplastic.txt                                                                  = Neoplastic
+angal.anamnesis.family.nothingtodeclare.txt                                                            = Nothing to declare
+angal.anamnesis.family.orto.txt                                                                        = Ortoreumatologic
+angal.anamnesis.family.other.txt                                                                       = Other
+angal.anamnesis.family.remarks.txt                                                                     = Remarks (Family)
+angal.anamnesis.family.respiratory.txt                                                                 = Respiratory
+angal.anamnesis.family.excludenothingtodeclare.tooltip                                                 = Exclude 'Nothing to declare'
+angal.anamnesis.family.resetfamilyhistory.tooltip                                                      = Reset Family History
+angal.anamnesis.firstname.label                                                                        = First Name:
+angal.anamnesis.hrt.txt                                                                                = HRT
+angal.anamnesis.hrt.no.txt                                                                             = No
+angal.anamnesis.hrt.yes.txt                                                                            = Yes
+angal.anamnesis.menopause.txt                                                                          = Menopause
+angal.anamnesis.menopause.no.txt                                                                       = No
+angal.anamnesis.menopause.years.txt                                                                    = Years
+angal.anamnesis.menopause.yes.txt                                                                      = Yes
+angal.anamnesis.patid.label                                                                            = Code:
+angal.anamnesis.patient.txt                                                                            = Patient
+angal.anamnesis.period.txt                                                                             = Period
+angal.anamnesis.period.normal.txt                                                                      = Normal
+angal.anamnesis.period.other.txt                                                                       = Other
+angal.anamnesis.physiologicalhistory.txt                                                               = Physiological History
+angal.anamnesis.pregnancies.txt                                                                        = Pregnancies
+angal.anamnesis.pregnancies.abort.txt                                                                  = Abort Nr
+angal.anamnesis.pregnancies.delivery.txt                                                               = Delivery Nr
+angal.anamnesis.pregnancies.no.txt                                                                     = No
+angal.anamnesis.pregnancies.nr.txt                                                                     = Nr
+angal.anamnesis.pregnancies.yes.txt                                                                    = Yes
+angal.anamnesis.save.txt                                                                               = Save
+angal.anamnesis.secondname.label                                                                       = Second Name:
+angal.anamnesis.smoke.txt                                                                              = Smoke
+angal.anamnesis.smoke.no.txt                                                                           = No
+angal.anamnesis.smoke.yes.txt                                                                          = Yes
+angal.anamnesis.taxcode.txt                                                                            = Tax Number ID:
+angal.anamnesis.title.txt                                                                              = PatientHistoryEdit
+angal.anamnesis.insertpatientexamination.tooltip                                                       = Insert Patient Examination
+angal.anamnesis.savethepatienthistory.tooltip                                                          = Save the Patient History
+
