--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1634,19 +1634,19 @@ angal.xmpp.usersinfo.border                                                     
 angal.xmpp.wantstosharewithyouthisreport.fmt.msg                                                       = \n*** {0} wants to share with you this report: {1}\n
 angal.xmpp.wouldliketosend.fmt.msg                                                                     = {0} would like to send: \n{1}
 angal.xmpp.youhaverejectedthefiletransfer.txt                                                          = you have rejected the file transfer
-angal.anamnesis.alcool.txt                                                        				       = Alcool
-angal.anamnesis.alcool.no.txt                                                     				       = No
-angal.anamnesis.alcool.yes.txt                                           					           = Yes
-angal.anamnesis.alvo.txt                                                 					           = Alvo
-angal.anamnesis.alvo.normal.txt                                              					       = Normal
-angal.anamnesis.alvo.other.txt                                                   				       = Other
-angal.anamnesis.cancel.txt                                           					               = Cancel
-angal.anamnesis.closed.cardiovascolaris.txt                            					               = Cardiovascolaris
-angal.anamnesis.closed.diseases.txt                                    					               = Diseases
-angal.anamnesis.closed.drugsaddiction.txt                               				               = DrugsAddiction
-angal.anamnesis.closed.endocrinometabol.txt                          					               = Endocrine / Metabolic
-angal.anamnesis.closed.gyno.txt                                     					               = Gyno/Obstetrical
-angal.anamnesis.closed.hypertension.txt                              					               = Hypertension
+angal.anamnesis.alcool.txt                                                                             = Alcool
+angal.anamnesis.alcool.no.txt                                                                          = No
+angal.anamnesis.alcool.yes.txt                                                                         = Yes
+angal.anamnesis.alvo.txt                                                                               = Alvo
+angal.anamnesis.alvo.normal.txt                                                                        = Normal
+angal.anamnesis.alvo.other.txt                                                                         = Other
+angal.anamnesis.cancel.txt               	                                                           = Cancel
+angal.anamnesis.closed.cardiovascolaris.txt                                                            = Cardiovascolaris
+angal.anamnesis.closed.diseases.txt                                                                    = Diseases
+angal.anamnesis.closed.drugsaddiction.txt                                                              = DrugsAddiction
+angal.anamnesis.closed.endocrinometabol.txt                                                            = Endocrine / Metabolic
+angal.anamnesis.closed.gyno.txt                                                                        = Gyno/Obstetrical
+angal.anamnesis.closed.hypertension.txt                                                                = Hypertension
 angal.anamnesis.closed.infective.txt                                                                   = Infective
 angal.anamnesis.closed.neoplastic.txt                                                                  = Neoplastic
 angal.anamnesis.closed.nothingtodeclare.txt                                                            = Nothing to declare
@@ -1708,13 +1708,13 @@ angal.anamnesis.pregnancies.delivery.txt                                        
 angal.anamnesis.pregnancies.no.txt                                                                     = No
 angal.anamnesis.pregnancies.nr.txt                                                                     = Nr
 angal.anamnesis.pregnancies.yes.txt                                                                    = Yes
-angal.anamnesis.save.txt                                                                               = Save
+angal.anamnesis.save.txt          		                                                               = Save
 angal.anamnesis.secondname.label                                                                       = Second Name:
 angal.anamnesis.smoke.txt                                                                              = Smoke
 angal.anamnesis.smoke.no.txt                                                                           = No
 angal.anamnesis.smoke.yes.txt                                                                          = Yes
 angal.anamnesis.taxcode.txt                                                                            = Tax Number ID:
-angal.anamnesis.title.txt                                                                              = PatientHistoryEdit
+angal.anamnesis.title.txt                                                                              = Patient History Edit
 angal.anamnesis.insertpatientexamination.tooltip                                                       = Insert Patient Examination
 angal.anamnesis.savethepatienthistory.tooltip                                                          = Save the Patient History
-
+angal.anamnesis.open.anamnesis.btn                                                                     = Anamnesis
