OP-1013 Improve the OPD Next Visit workflow

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1107,6 +1107,7 @@ angal.opd.operation                                                             
 angal.opd.patientcode.fmt.msg                                                                          = Patient (code: {0})
 angal.opd.patientid.col                                                                                = PAT. ID
 angal.opd.patientstatus.col                                                                            = Status
+angal.opd.pleasechooseavalidtimeforthenextvisit.msg                                                    = Please choose a valid time for the next visit.
 angal.opd.pleasechooseawardforthenextvisit.msg                                                         = Please choose a ward for the next visit.
 angal.opd.pleaseinsertattendancedate.msg                                                               = Please insert an attendance date.
 angal.opd.pleaseinsertavalidattendancedate.msg                                                         = Please insert a valid attendance date.
