Fix some labels

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -544,7 +544,7 @@ angal.hospital.hospitalinformation.title                                        
 angal.hospital.savethechanges.msg                                                                      = Save the changes?
 angal.hospital.thestartofvisitinghoursislaterthantheendhour.msg                                        = The start of the visiting hours is after the end hour.
 angal.hospital.thevisitdurationcannotbeblank.msg                                                       = The visit duration cannot be blank.
-angal.hospital.thevisitdurationmustbepositiveandlessthanthelengthofthevisitinghours.msg                = The visit duration must be postive and less than the length of the visiting hours.
+angal.hospital.thevisitdurationmustbepositiveandlessthanthelengthofthevisitinghours.msg                = The visit duration must be positive and less than the length of the visiting hours.
 angal.hospital.visitduration.txt                                                                       = Visit duration
 angal.hospital.visitendhour.txt                                                                        = Visit end hour
 angal.hospital.visitstarthour.txt                                                                      = Visit start hour
@@ -959,7 +959,7 @@ angal.menu.newbill                                                              
 angal.menu.opd                                                                                         = OPD
 angal.menu.opdchart                                                                                    = OPD Chart
 angal.menu.operation                                                                                   = Operation
-angal.menu.operationlist                                                                               = OperationList
+angal.menu.operationlist                                                                               = Operation List
 angal.menu.operationtype                                                                               = Operation
 angal.menu.otherprices                                                                                 = Other Prices
 angal.menu.patientvaccine                                                                              = Patient Vaccines
