--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1717,4 +1717,20 @@ angal.anamnesis.taxcode.txt                                                     
 angal.anamnesis.title.txt                                                                              = Patient History Edit
 angal.anamnesis.insertpatientexamination.tooltip                                                       = Insert Patient Examination
 angal.anamnesis.savethepatienthistory.tooltip                                                          = Save the Patient History
-angal.anamnesis.open.anamnesis.btn                                                                     = Anamnesis
+angal.anamnesis.open.anamnesis.btn              
+angal.anamnesis.open.cardiovascolaris                                         = Cardiovascolaris
+angal.anamnesis.open.diseases                                                 = Diseases
+angal.anamnesis.open.drugsaddiction                                           = DrugsAddiction
+angal.anamnesis.open.endocrinometabol                                         = Endocrine / Metabolic
+angal.anamnesis.open.gyno                                                     = Gyno/Obstetrical
+angal.anamnesis.open.hypertension                                             = Hypertension
+angal.anamnesis.open.infective                                                = Infective
+angal.anamnesis.open.neoplastic                                               = Neoplastic
+angal.anamnesis.open.nothingtodeclare                                         = Nothing to declare
+angal.anamnesis.open.orto                                                     = Ortoreumatologic
+angal.anamnesis.open.other                                                    = Other
+angal.anamnesis.open.recentproblems                                           = Recent problems (Open)
+angal.anamnesis.open.remarks                                                  = Remarks (Open)
+angal.anamnesis.open.respiratory                                              = Respiratory
+angal.anamnesis.open.tooltip.excludenothingtodeclare                          = Exclude 'Nothing to declare'
+angal.anamnesis.open.tooltip.resetrecentproblems                              = Reset Recent problems                                                       = Anamnesis
