chore: restore previous code

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1684,7 +1684,7 @@ angal.anamnesis.family.neoplastic.txt                                           
 angal.anamnesis.family.nothingtodeclare.txt                                                            = Nothing to declare
 angal.anamnesis.family.orto.txt                                                                        = Ortoreumatologic
 angal.anamnesis.family.other.txt                                                                       = Other
-angal.anamnesis.family.remarks.txt                                                                     = Remarks (Family)
+angal.anamnesis.family.remarks.border                                                                  = Remarks (Family)
 angal.anamnesis.family.respiratory.txt                                                                 = Respiratory
 angal.anamnesis.family.excludenothingtodeclare.tooltip                                                 = Exclude 'Nothing to declare'
 angal.anamnesis.family.resetfamilyhistory.tooltip                                                      = Reset Family History
@@ -1701,7 +1701,7 @@ angal.anamnesis.patient.txt                                                     
 angal.anamnesis.period.txt                                                                             = Period
 angal.anamnesis.period.normal.txt                                                                      = Normal
 angal.anamnesis.period.other.txt                                                                       = Other
-angal.anamnesis.physiologicalhistory.txt                                                               = Physiological History
+angal.anamnesis.physiologicalhistory.border                                                            = Physiological History
 angal.anamnesis.pregnancies.txt                                                                        = Pregnancies
 angal.anamnesis.pregnancies.abort.txt                                                                  = Abort Nr
 angal.anamnesis.pregnancies.delivery.txt                                                               = Delivery Nr
@@ -1717,20 +1717,20 @@ angal.anamnesis.taxcode.txt                                                     
 angal.anamnesis.title.txt                                                                              = Patient History Edit
 angal.anamnesis.insertpatientexamination.tooltip                                                       = Insert Patient Examination
 angal.anamnesis.savethepatienthistory.tooltip                                                          = Save the Patient History
-angal.anamnesis.open.anamnesis.btn              
-angal.anamnesis.open.cardiovascolaris                                         = Cardiovascolaris
-angal.anamnesis.open.diseases                                                 = Diseases
-angal.anamnesis.open.drugsaddiction                                           = DrugsAddiction
-angal.anamnesis.open.endocrinometabol                                         = Endocrine / Metabolic
-angal.anamnesis.open.gyno                                                     = Gyno/Obstetrical
-angal.anamnesis.open.hypertension                                             = Hypertension
-angal.anamnesis.open.infective                                                = Infective
-angal.anamnesis.open.neoplastic                                               = Neoplastic
-angal.anamnesis.open.nothingtodeclare                                         = Nothing to declare
-angal.anamnesis.open.orto                                                     = Ortoreumatologic
-angal.anamnesis.open.other                                                    = Other
-angal.anamnesis.open.recentproblems                                           = Recent problems (Open)
-angal.anamnesis.open.remarks                                                  = Remarks (Open)
-angal.anamnesis.open.respiratory                                              = Respiratory
-angal.anamnesis.open.tooltip.excludenothingtodeclare                          = Exclude 'Nothing to declare'
-angal.anamnesis.open.tooltip.resetrecentproblems                              = Reset Recent problems                                                       = Anamnesis
+angal.anamnesis.open.anamnesis.btn                                                                     = Anamnesis
+angal.anamnesis.open.cardiovascolaris.txt                                                              = Cardiovascolaris
+angal.anamnesis.open.diseases.txt                                                                      = Diseases
+angal.anamnesis.open.drugsaddiction.txt                                                                = DrugsAddiction
+angal.anamnesis.open.endocrinometabol.txt                                                              = Endocrine / Metabolic
+angal.anamnesis.open.gyno.txt                                                                          = Gyno/Obstetrical
+angal.anamnesis.open.hypertension.txt                                                                  = Hypertension
+angal.anamnesis.open.infective.txt                                                                     = Infective
+angal.anamnesis.open.neoplastic.txt                                                                    = Neoplastic
+angal.anamnesis.open.nothingtodeclare.txt                                                              = Nothing to declare
+angal.anamnesis.open.orto.txt                                                                          = Ortoreumatologic
+angal.anamnesis.open.other.txt                                                                         = Other
+angal.anamnesis.open.recentproblems.border                                                             = Recent problems (Open)
+angal.anamnesis.open.remarks.border                                                                    = Remarks (Open)
+angal.anamnesis.open.respiratory.txt                                                                   = Respiratory
+angal.anamnesis.open.tooltip.excludenothingtodeclare.txt                                               = Exclude 'Nothing to declare'
+angal.anamnesis.open.tooltip.resetrecentproblems.txt                                                   = Reset Recent problems                                                       = Anamnesis
