OP-684 Launch the online version of the doc if not found locally

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -532,9 +532,8 @@ angal.groupsbrowser.theadmingroupcannotbedeleted.msg                            
 angal.groupsbrowser.thegroupalreadyexists.fmt.msg                                                      = The group "{0}" already exists.
 angal.groupsbrowser.thisgrouphasusersandcannotbedeleted.msg                                            = This group has users and cannot be deleted.
 angal.groupsbrowser.title                                                                              = Groups Browser
-angal.help.pdfviewernotfound                                                                           = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
-angal.help.pdfviewernotfoundoruserguidenotfound                                                        = PDF Viewer not found or User Guide not found in the Documents folder
-angal.help.userguidenotfound                                                                           = User Guide not found in the Documents folder
+angal.help.pdfviewernotfound.msg                                                                       = PDF Viewer not found.\nThe User's Guide is located in the Documents folder.
+angal.help.pdfviewernotfoundoruserguidenotfound.msg                                                    = PDF Viewer not found or User Guide not found in the Documents folder.\nWill try the online version.angal.help.userguidenotfound.msg                                                                       = User Guide not found in the Documents folder.
 angal.hopsital.thehospitalnamecannotbeblank.msg                                                        = The hospital name cannot be blank.
 angal.hospital                                                                                         = Open Hospital
 angal.hospital.currencycod                                                                             = Currency Code
