--- a/rpt_base/PDF/README
+++ b/rpt_base/PDF/README
@@ -1,1 +1,1 @@
-This is the target directory for the reports. Please do not delete this file on the repository.
+This is the target directory for the base reports. Please do not delete this file on the repository.
